# login/controller/cuser/weibo.go
@@ -6,49 +6,48 @@ import (
 	"net/url"
 	"sports_service/server/global/consts"
 	"sports_service/server/global/login/errdef"
+	"sports_service/server/global/login/log"
 	"sports_service/server/models"
 	"sports_service/server/models/muser"
-	"sports_service/server/login/config"
-	"sports_service/server/global/login/log"
 	"sports_service/server/util"
+	"strconv"
+	"fmt"
 )
 
 // 微信登陆/注册
-func (svc *UserModule) WeiboLoginOrReg(code string) (int, string, *models.User) {
-	accessToken := svc.WechatAccessToken(code)
-	if accessToken == nil {
-		return errdef.WX_ACCESS_TOKEN_FAIL, "", nil
-	}
-
-	info := svc.social.GetSocialAccountByType(consts.TYPE_WECHAT, accessToken.Unionid)
-	// 微信信息不存在 则注册
+func (svc *UserModule) WeiboLoginOrReg(params *muser.WeiboLoginParams) (int, string, *models.User) {
+	info := svc.social.GetSocialAccountByType(consts.TYPE_WEIBO, fmt.Sprint(params.Uid))
+	// 微博信息不存在 则注册
 	if info == nil {
-		wxinfo := svc.WechatInfo(accessToken)
-		r := muser.NewWechatRegister()
-		if err := r.Register(svc.user, svc.social, svc.context, accessToken.Unionid, wxinfo.Headimgurl, wxinfo.Nickname, wxinfo.Sex); err != nil {
-			log.Log.Errorf("wx_trace: register err:%s", err)
-			return errdef.WX_REGISTER_FAIL, "", nil
+		weiboInfo := svc.WeiboInfo(params.Uid, params.AccessToken)
+		r := muser.NewWeiboRegister()
+		// 替换成app性别标识
+		gender := svc.InterChangeGender(weiboInfo.Gender)
+		// 注册
+		if err := r.Register(svc.user, svc.social, svc.context, fmt.Sprint(params.Uid), weiboInfo.AvatarLarge, weiboInfo.Name, consts.TYPE_WEIBO, gender); err != nil {
+			log.Log.Errorf("weibo_trace: register err:%s", err)
+			return errdef.WEIBO_REGISTER_FAIL, "", nil
 		}
 
 		// 开启事务
 		svc.engine.Begin()
 		// 添加用户
 		if err := svc.user.AddUser(); err != nil {
-			log.Log.Errorf("wx_trace: add user err:%s", err)
+			log.Log.Errorf("weibo_trace: add user err:%s", err)
 			svc.engine.Rollback()
 			return errdef.USER_ADD_INFO_FAIL, "", nil
 		}
 
-		// 添加社交帐号（微信）
+		// 添加社交帐号（微博）
 		if err := svc.social.AddSocialAccountInfo(); err != nil {
-			log.Log.Errorf("wx_trace: add wx account err:%s", err)
+			log.Log.Errorf("weibo_trace: add wx account err:%s", err)
 			svc.engine.Rollback()
-			return errdef.WX_ADD_ACCOUNT_FAIL, "", nil
+			return errdef.WEIBO_ADD_ACCOUNT_FAIL, "", nil
 		}
 
 		// 提交事务
 		if err := svc.engine.Commit(); err != nil {
-			log.Log.Errorf("wx_trace: commit transaction err:%s", err)
+			log.Log.Errorf("weibo_trace: commit transaction err:%s", err)
 			return errdef.ERROR, "", nil
 		}
 
@@ -56,7 +55,7 @@ func (svc *UserModule) WeiboLoginOrReg(code string) (int, string, *models.User) 
 		token := svc.user.GenUserToken(svc.user.User.UserId, util.Md5String(svc.user.User.Password))
 		// 保存到redis
 		if err := svc.user.SaveUserToken(svc.user.User.UserId, token); err != nil {
-			log.Log.Errorf("user_trace: save user token err:%s", err)
+			log.Log.Errorf("weibo_trace: save user token err:%s", err)
 		}
 
 		return errdef.SUCCESS, token, svc.user.User
@@ -73,58 +72,47 @@ func (svc *UserModule) WeiboLoginOrReg(code string) (int, string, *models.User) 
 		token = svc.user.GenUserToken(svc.user.User.UserId, util.Md5String(svc.user.User.Password))
 		// 重新保存到redis
 		if err := svc.user.SaveUserToken(svc.user.User.UserId, token); err != nil {
-			log.Log.Errorf("user_trace: save user token err:%s", err)
+			log.Log.Errorf("weibo_trace: save user token err:%s", err)
 		}
 	}
 
 	return errdef.SUCCESS, token, svc.user.User
 }
 
-// WxAccessToken 获取微信accessToken
-func (svc *UserModule) WeiboAccessToken(code string) *muser.AccessToken {
-	v := url.Values{}
-	v.Set("code", code)
-	// 开放平台appid
-	v.Set("appid", config.Global.WechatAppid)
-	// 开放平台secret
-	v.Set("secret", config.Global.WechatSecret)
-	v.Set("grant_type", "authorization_code")
-	// 返回值
-	accessToken := muser.AccessToken{}
-	resp, body, errs := gorequest.New().Get(consts.WECHAT_ACCESS_TOKEN_URL + v.Encode()).EndStruct(&accessToken)
-	if errs != nil {
-		log.Log.Errorf("%+v", errs)
-		return nil
+// 替换成app的性别标识
+func (svc *UserModule) InterChangeGender(gender string) int {
+	switch gender {
+	case "m":
+		return consts.BOY
+	case "f":
+		return consts.GIRL
+	default:
+		return consts.BOY_OR_GIRL
 	}
-
-	if accessToken.Unionid == "" {
-		log.Log.Errorf("err body: %s, resp: %+v", string(body), resp)
-		return nil
-	}
-
-	return &accessToken
 }
 
-// 微信用户信息
-func (svc *UserModule) WeiboInfo(accessToken *muser.AccessToken) *muser.WechatUserInfo {
+// 微博用户信息
+func (svc *UserModule) WeiboInfo(uid int64, token string) *muser.WeiboInfo {
+	// 通过拉取用户信息去验证access_token和uid的有效性
 	v := url.Values{}
-	v.Set("access_token", accessToken.AccessToken)
-	v.Set("openid", accessToken.Openid)
-	wxinfo := muser.WechatUserInfo{}
-	resp, body, errs := gorequest.New().Get(consts.WECHAT_USER_INFO_URL + v.Encode()).EndStruct(&wxinfo)
+	v.Set("access_token", token)
+	v.Set("uid", strconv.FormatInt(uid, 10))
+	weiboInfo := &muser.WeiboInfo{}
+	resp, body, errs := gorequest.New().Get(consts.WEIBO_USER_INFO_URL + v.Encode()).EndStruct(weiboInfo)
 	if errs != nil {
-		log.Log.Errorf("get wxinfo err %+v", errs)
+		log.Log.Errorf("weibo_trace: get weibo info err %+v", errs)
 		return nil
 	}
 
-	log.Log.Debugf("wxUserInfo: %+v", wxinfo)
-	log.Log.Debugf("resp : %+v", resp)
-	log.Log.Debugf("body : %+v", string(body))
+	log.Log.Debugf("weiboInfo: %+v", weiboInfo)
+	log.Log.Debugf("resp: %+v", resp)
+	log.Log.Debugf("body: %s", string(body))
+	log.Log.Debugf("errs: %+v", errs)
 
-	if wxinfo.Errcode != 0 || resp.StatusCode != 200 {
-		log.Log.Errorf("request failed, errCode:%d, statusCode:%d", wxinfo.Errcode, resp.StatusCode)
+	if resp.StatusCode != 200 || weiboInfo.ErrorCode != "" {
+		log.Log.Errorf("weibo_trace: request failed, errCode:%d, error:%s", weiboInfo.ErrorCode, weiboInfo.Error)
 		return nil
 	}
 
-	return &wxinfo
+	return weiboInfo
 }
